compiler/tests/should-pass/code-generation/SourceCommitmentDestReplication4.via
host alice : {A}
host bob   : {A}
host chuck : {A}
host dave  : {A}

fun main() {
let $aliceLocal@Local(host = alice) = input int from alice;
let $aliceCommit@Commitment(receivers = {bob}, sender = alice) = $aliceLocal;
let $daveChuckDeclassified@Replication(hosts = {chuck, dave}) = $aliceCommit;
}
