compiler/tests/should-fail/InvalidProtocolAnnotation.via
/* InvalidProtocolAnnotationError */

host alice

fun main() {
    val a: int{B}@Local(host = alice) = 42;
}
